[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Ufo.gd" type="Script" id=1]
[ext_resource path="res://Materials/GlowMat.tres" type="Material" id=2]
[ext_resource path="res://Sprites/ufo.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ufo01.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ufoExplosion.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[node name="Ufo" type="Node2D"]
script = ExtResource( 1 )

[node name="UfoSprite" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1.8, 0.2, 0.2, 1 )
material = ExtResource( 2 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 1 )
speed_scale = 0.25

[node name="Explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 1.8, 0.2, 0.2, 1 )
material = ExtResource( 2 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 6.42377 )
shape = SubResource( 2 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
